--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - run: echo ${{ github.event.pull_request.title }}
+      - run: cat release.json
