--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - run: cat release.json
-      - name: Merge PR
-        uses: ridedott/merge-me-action@v2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: automerge
+        uses: pascalgn/automerge-action@latest
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          LOG: "TRACE"  # or "DEBUG"
