--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - run: cat release.json
       - name: automerge
-        uses: pascalgn/automerge-action@latest
+        uses: pascalgn/automerge-action@v0.14.2
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           LOG: "TRACE"  # or "DEBUG"
