--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -10,4 +10,19 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - run: echo ${{ github.event.pull_request.title }}
+      - run: cat release.json
+      - name: automerge
+        uses: pascalgn/automerge-action@v0.14.2
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: ""
+          MERGE_METHOD: squash
+
+  draft-github-release:
+    runs-on: ubuntu-latest
+    needs: [release-test]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Determine Release Tag
+        run: echo "HELLO!"
