--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -17,3 +17,14 @@ jobs:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           MERGE_LABELS: ""
 
+          MERGE_METHOD: squash
+
+  draft-github-release:
+    runs-on: ubuntu-latest
+    needs: [release-test]
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+      - name: Determine Release Tag
+        run: echo "HELLO!"
+
