--- a/.github/workflows/create_pr.yml
+++ b/.github/workflows/create_pr.yml
@@ -1,5 +1,8 @@
 name: Create Release PR
-on: workflow_run
+on:
+  workflow_run:
+    workflows:
+      - test
 jobs:
   release:
     runs-on: ubuntu-latest
