--- a/release.json
+++ b/release.json
@@ -1,5 +1,9 @@
 {
-  "image0" : "1.0.0",
-  "image1" : "1.0.2",
-  "image2" : "1.0.10"
+  "mongodb-kubernetes-operator": "0.6.0",
+  "version-upgrade-hook": "1.0.2",
+  "readiness-probe": "1.0.4",
+  "mongodb-agent": {
+    "version": "10.29.0.6830-1",
+    "tools_version": "100.2.0"
+  }
 }
