--- a/.github/workflows/create_release_pr.yml
+++ b/.github/workflows/create_release_pr.yml
@@ -1,8 +1,6 @@
 name: Create Release PR
 on:
   workflow_dispatch
-#  schedule:
-#    - cron: '0 12 * * MON'
 
 jobs:
   CreateReleasePR:
@@ -24,7 +22,7 @@ jobs:
       uses: technote-space/create-pr-action@v2
       with:
         EXECUTE_COMMANDS: |
-          scripts/ci/update_release.py
+          python scripts/ci/update_release.py
         COMMIT_MESSAGE: 'Release Operator v${{ steps.release_version.outputs.OUTPUT }}'
         COMMIT_NAME: 'GitHub Actions'
         COMMIT_EMAIL: 'support@mongodb.com'
