--- a/.github/workflows/release_images.yml
+++ b/.github/workflows/release_images.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   release-test:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.pull_request.title, 'Release:') && github.event.review.state == 'approved'
+    if: startsWith(github.event.pull_request.title, 'Release') && github.event.review.state == 'approved'
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
