--- a/.github/workflows/create_release_pr.yml
+++ b/.github/workflows/create_release_pr.yml
@@ -11,8 +11,10 @@ jobs:
     - name: Determine Release Version
       id: release_version
       run: |
-        OUTPUT=$(jq -r '."mongodb-kubernetes-operator"' < $GITHUB_WORKSPACE/release.json) &&
+        OUTPUT=$(jq -r '."mongodb-kubernetes-operator"' < $GITHUB_WORKSPACE/release.json)
         echo "::set-output name=OUTPUT::$OUTPUT"
+        DATE=$(date '+%Y-%m-%d')
+        echo "::set-output name=DATE::$DATE"
     - uses: actions/setup-python@v2
       with:
         python-version: '3.6'
@@ -27,4 +29,4 @@ jobs:
         COMMIT_NAME: 'GitHub Actions'
         COMMIT_EMAIL: 'support@mongodb.com'
         PR_BRANCH_NAME: 'release-v${{steps.release_version.outputs.OUTPUT}}'
-        PR_TITLE: 'Release MongoDB Kubernetes Operator v${{ steps.release_version.outputs.OUTPUT }}'
+        PR_TITLE: 'Release MongoDB Kubernetes Operator v${{ steps.release_version.outputs.OUTPUT }}-${{ steps.release_version.outputs.DATE }}'
