--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,10 +1,8 @@
 name: Create Release PR
-on:
-  - pull_request
-  - push
+on: pull_request
 
 jobs:
-  On Pull Request:
+  OnPullRequest:
     runs-on: ubuntu-latest
     steps:
     - name: Hello World
