added usage of secret

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -7,3 +7,7 @@ jobs:
     steps:
     - name: Hello World
       run: echo "Hello World!"
+    - name: My Secret
+      run: echo ${{ secrets.MY_SECRET }} > my_secret.txt
+    - name: Read Secret
+      run: cat my_secret.txt
