--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,10 +1,12 @@
 name: Create Release PR
 on:
   pull_request_target:
+    types: [labeled]
   workflow_dispatch:
 
 jobs:
   OnPullRequest:
+    if: contains(github.event.pull_request.labels.*.name, 'safe-to-test')
     runs-on: ubuntu-latest
     steps:
     - name: Hello World
