added check for repo

--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   OnPullRequest:
-    if: contains(github.event.pull_request.labels.*.name, 'safe-to-test')
+    if: github.event.pull_request.head.repo.full_name == 'chatton/ActionsTest' || contains(github.event.pull_request.labels.*.name, 'safe-to-test')
     runs-on: ubuntu-latest
     steps:
     - name: Hello World
