--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,7 +1,7 @@
 name: Create Release PR
 on:
   pull_request_target:
-    types: [labeled]
+    types: [opened, labeled]
   workflow_dispatch:
 
 jobs:
