--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,8 +1,8 @@
 name: E2E Tests
 on:
-  pull_request_target:
-    branches:
-      - master
+#  pull_request_target:
+#    branches:
+#      - master
   pull_request:
     branches:
       - master
