--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -3,9 +3,9 @@ on:
   pull_request_target:
     branches:
       - master
-#  pull_request:
-#    branches:
-#      - master
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
