--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,7 +1,7 @@
 name: E2E Tests
 on:
   pull_request_target:
-    types: [label, opened]
+    types: [labeled, opened]
     branches:
       - master
   pull_request:
