--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -2,15 +2,12 @@ name: E2E Tests
 on:
   - pull_request_target:
      types: [labeled]
-     branches:
-     - master
+     branches: [master]
   - pull_request:
-     branches:
-     - master
+      branches: [master]
   - push:
-     branches:
-    - master
-  workflow_dispatch:
+      branches: [master]
+  - workflow_dispatch:
 
 jobs:
   OnPullRequest:
