--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -7,7 +7,7 @@ on:
       branches: [master]
   - push:
       branches: [master]
-  - workflow_dispatch:
+  - workflow_dispatch: {}
 
 jobs:
   OnPullRequest:
