--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,20 +1,22 @@
 name: E2E Tests
-#on:
-#  - pull_request_target:
-#     types: [labeled]
-#     branches: [master]
-#  - pull_request:
-#      branches: [master]
-#  - push:
-#      branches: [master]
+on:
+  - pull_request_target:
+     types: [labeled]
+     branches: [master]
+  - pull_request:
+      branches: [master]
+  - push:
+      branches: [master]
 
-on: [pull_request_target, pull_request, push]
+#on: [pull_request_target, pull_request, push]
 
 jobs:
   OnPullRequest:
     if: github.event.pull_request.head.repo.full_name == 'chatton/ActionsTest' || contains(github.event.pull_request.labels.*.name, 'safe-to-test')
     runs-on: ubuntu-latest
     steps:
+    - name: Skip Duplicate Actions
+      uses: fkirc/skip-duplicate-actions@v3.4.0
     - name: Hello World
       run: echo "Hello World!"
     - name: My Secret
