--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,12 +1,13 @@
 name: E2E Tests
 on:
-  - pull_request_target:
-     types: [labeled]
-     branches: [master]
-  - pull_request:
-      branches: [master]
-  - push:
-      branches: [master]
+  pull_request_target:
+    types: [opened, labeled]
+    branches:
+      - master
+  push:
+    branches:
+      - master
+  workflow_dispatch:
 
 #on: [pull_request_target, pull_request, push]
 
