--- a/.github/workflows/on_pull_request_fork.yml
+++ b/.github/workflows/on_pull_request_fork.yml
@@ -1,4 +1,4 @@
-name: E2E Tests
+name: E2E Tests Fork
 on:
   pull_request_target:
     types: [labeled]
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  OnPullRequest:
+  OnPullRequestFork:
     if: github.event.pull_request.head.repo.full_name != 'chatton/ActionsTest' && contains(github.event.pull_request.labels.*.name, 'safe-to-test')
     runs-on: ubuntu-latest
     steps:
