--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -19,3 +19,12 @@ jobs:
       run: echo ${{ secrets.MY_SECRET }} > my_secret.txt
     - name: Read Secret
       run: cat my_secret.txt
+
+  e2e-success:
+    if: always()
+    needs: [OnPullRequest]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check E2E Result
+        if: needs.OnPullRequest.result != 'success'
+        run: exit 1
