--- a/.github/workflows/on_pull_request_fork.yml
+++ b/.github/workflows/on_pull_request_fork.yml
@@ -16,6 +16,11 @@ jobs:
       run: echo ${{ secrets.MY_SECRET }} > my_secret.txt
     - name: Read Secret
       run: cat my_secret.txt
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.6'
+    - run: pytest scripts/ci/tests.py
 
   e2e-success:
     if: always()
