--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.6'
+    - run: pip install pytest
     - run: pytest scripts/ci/tests.py
   e2e-success:
     if: always()
